--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,15 @@
     "bin": ["bin/gpgl"],
     "require": {
         "symfony/console": "^3.2",
-        "gpgl/core": "^0.1",
+        "gpgl/core": "dev-meta",
         "guzzlehttp/guzzle": "^6.2"
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "/home/xenial/scratch/gpgl/core"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "gpgl\\console\\": "src/"
