--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,5 +23,6 @@
             lowUpperBound="35"   highLowerBound="90"/>
         <log type="coverage-text" target="php://stdout"
             showUncoveredFiles="false"/>
+        <log type="coverage-clover" target="./tests/coverage/coverage.xml"/>
     </logging>
 </phpunit>
