--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.1"
+    },
+    "autoload-dev": {
+        "files": [
+            "tests/Helpers.php"
+        ]
     }
 }
