--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,6 +12,7 @@
         <testsuite name="Integration Test Suite">
             <file>./tests/integration/RemotePushTest.php</file>
             <file>./tests/integration/RemotePullTest.php</file>
+            <file>./tests/integration/RemotePushPullTest.php</file>
         </testsuite>
         <testsuite name="Unit Test Suite">
             <directory>./tests/unit</directory>
