push only if remote is parent

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,7 @@
             <file>./tests/integration/RemotePullTest.php</file>
             <file>./tests/integration/RemotePushPullTest.php</file>
             <file>./tests/integration/PullScenarioTest.php</file>
+            <file>./tests/integration/PushScenarioTest.php</file>
         </testsuite>
         <testsuite name="Unit Test Suite">
             <directory>./tests/unit</directory>
